--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 img {
     width: 200px;
 }
+
 body {
     text-align: center;
-    font-family: "Arial";
+    font-family: "Georgia";
+    style= "color orange"
 }
+
